# volumetry-visionaryt

./: .gitmodules  AutoIPScan.sln  CMakeCache.txt  CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  SampleVisionaryT.sln  SampleVisionaryTrun  VisionaryT.ply  VisionaryT_test.ply  cloud_nobackground.ply  cmake_install.cmake  compare-clouds  compare-clouds.cpp  outputcloud.pcd  outputcloud.ply  pointcloud1.ply  pointcloudunfiltered.ply  processing.py  segmentation-test  segmentation-test.cpp  testcloud.ply  testcloud_original.ply  testcloud_pcl.ply  volume-visionaryt  volume-visionaryt.cpp  volumetry-run
SampleAutoIP/: AutoIPScan.vcxproj  AutoIPScan.vcxproj.filters  SampleAutoIPScan.cpp
SampleVisionaryT/: README_C++_Sample_VisionaryT.md  SampleVisionaryT.cpp  SampleVisionaryT.vcxproj  SampleVisionaryT.vcxproj.filters  VisionaryT.ply
SampleVisionaryT/x64/Debug/: SampleVisionaryT.exe.recipe  vc142.idb
SampleVisionaryT/x64/Debug/SampleVisionaryT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisionaryCommon/: Makefile  VisionaryAutoIPScan.cpp  VisionaryCommon.vcxproj  VisionaryCommon.vcxproj.filters  cmake_install.cmake
VisionaryCommon/x64/Debug/: CoLaBCommand.xdc  CoLaBCommandBuilder.xdc  CoLaBCommandReader.xdc  PointCloudPlyWriter.xdc  VisionaryAutoIPScan.xdc  VisionaryCommon.idb  VisionaryCommon.vcxproj.FileListAbsolute.txt  VisionaryControl.xdc  VisionaryData.xdc  VisionaryTData.xdc
VisionaryCommon/x64/Debug/VisionaryCommon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  VisionaryCommon.lastbuildstate  xdcmake.command.1.tlog
qhull/: Qhull.cpp  Qhull.h
